# agent-reliability-platform

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
eval/: probes.jsonl
scripts/: run_crosscheck.py  seed_demo.py
src/: config.py  runner.py
src/agent/: client.py
src/drift/: distribution.py  engine.py  quality.py
src/scoring/: anchor.py  calibration.py  judge.py  record.py
src/store/: metrics_store.py
tests/: test_agent_client.py  test_calibration.py  test_calibration_store.py  test_distribution_drift.py  test_drift_engine.py  test_metrics_store.py  test_quality_drift.py  test_record.py  test_runner.py  test_seed_demo.py
