[project]
name = "agent-reliability-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "judgekit[llm]",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
judgekit = { git = "https://github.com/umairrasheed828/judgekit" }

[tool.mypy]
plugins = ["pydantic.mypy"]
