[project]
name = "agent-reliability-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "judgekit[llm]",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
judgekit = { git = "https://github.com/umairrasheed828/judgekit" }
torch = { index = "pytorch-cu128" }

[tool.mypy]
plugins = ["pydantic.mypy"]

[project.optional-dependencies]
gpu = [
    "torch",
    "transformers",
    "peft",
    "bitsandbytes",
    "accelerate",
    "huggingface_hub",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "peft.*", "bitsandbytes.*", "accelerate.*"]
ignore_missing_imports = true
